[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "yolodesktop"
version = "1.0.0"
description = "Real-time YOLOv8 object detection in a Tkinter desktop app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["yolo", "object-detection", "computer-vision", "tkinter", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
yolo-demo = "app:main"

[project.urls]
Homepage = "https://github.com/your-username/python-yolo-demo"
Issues   = "https://github.com/your-username/python-yolo-demo/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["detector"]
known-third-party = ["cv2", "numpy", "PIL", "ultralytics"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = ["arg-type", "attr-defined"]
